--- a/angular.json
+++ b/angular.json
@@ -18,7 +18,13 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/custom_icon.png", "src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/custom_icon.png",
+              "src/favicon.ico",
+              "src/sitemap.xml",
+              "src/robots.txt",
+              "src/assets"
+            ],
             "styles": ["src/styles.css"],
             "scripts": []
           },
